--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -37,26 +37,6 @@
   chcontrib = {misc},
 }
 
-@misc{AbateABEFHLPST18,
-  author = {Carmine Abate and
-            Arthur {Azevedo de Amorim} and
-            Roberto Blanco and
-            Ana Nora Evans and
-            Guglielmo Fachini and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Th\'eo Laurent and
-            Benjamin C. Pierce and
-            Marco Stronati and
-            Andrew Tolmach},
-  title = {When Good Components Go Bad:
-           Formally Secure Compilation Despite Dynamic Compromise},
-  howpublished = {arXiv:1802.00588},
-  url = {https://arxiv.org/abs/1802.00588},
-  year = {2018},
-  month = feb,
-  chcontrib = {equalthree},
-}
-
 @misc{yannis-report,
   author = {Yannis Juglaret and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -74,6 +54,28 @@
 }
 
 %% Conference Papers
+
+@inproceedings{AbateABEFHLPST18,
+  author = {Carmine Abate and
+            Arthur {Azevedo de Amorim} and
+            Roberto Blanco and
+            Ana Nora Evans and
+            Guglielmo Fachini and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Th\'eo Laurent and
+            Benjamin C. Pierce and
+            Marco Stronati and
+            Andrew Tolmach},
+  title = {When Good Components Go Bad:
+           Formally Secure Compilation Despite Dynamic Compromise},
+  booktitle = {25th ACM Conference on
+               Computer and Communications Security (CCS 2018)},
+  url = {https://arxiv.org/abs/1802.00588},
+  year = {2018},
+  month = oct,
+  chcontrib = {equalthree},
+  acceptance = {134/809=16.6},
+}
 
 @inproceedings{memory-safety,
   author = {Arthur {Azevedo de Amorim} and
