--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -37,22 +37,6 @@
   chcontrib = {misc},
 }
 
-@misc{yannis-report,
-  author = {Yannis Juglaret and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Arthur {Azevedo de Amorim} and
-            Benjamin C. Pierce and
-            Antal Spector-Zabusky and
-            Andrew Tolmach},
-  title = {Towards a Fully Abstract Compiler Using {Micro-Policies}:
-           Secure Compilation for Mutually Distrustful Components},
-  howpublished = {Technical Report, arXiv:1510.00697},
-  url = {http://arxiv.org/abs/1510.00697},
-  year = {2015},
-  month = oct,
-  chcontrib = {secondauthor},
-}
-
 %% Conference Papers
 
 @inproceedings{AbateABEFHLPST18,
@@ -69,12 +53,12 @@
   title = {When Good Components Go Bad:
            Formally Secure Compilation Despite Dynamic Compromise},
   booktitle = {25th ACM Conference on
-               Computer and Communications Security (CCS 2018)},
+               Computer and Communications Security (CCS)},
   url = {https://arxiv.org/abs/1802.00588},
   year = {2018},
   month = oct,
   chcontrib = {equalthree},
-  acceptance = {134/809=16.6},
+  acceptance = {134/809=0.17},
 }
 
 @inproceedings{memory-safety,
@@ -165,7 +149,7 @@
   ee        = {http://doi.acm.org/10.1145/3110261},
   doi       = {10.1145/3110261},
   url = {http://arxiv.org/abs/1703.00053},
-  acceptance = {44/126=34.9},
+  acceptance = {44/126=0.35},
   chcontrib = {minor},
 }
 
@@ -698,6 +682,43 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   chcontrib = {minor},
 }
 
+@book{SfLf,
+  author = {Benjamin C. Pierce and
+            Arthur {Azevedo de Amorim} and
+            Chris Casinghino and
+            Marco Gaboardi and
+            Michael Greenberg and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Vilhelm Sj\"oberg and
+            Brent Yorgey},
+  title = {Software Foundations: Logical Foundations},
+  month = aug,
+  year = {2018},
+  publisher = {Electronic textbook},
+  url = {https://softwarefoundations.cis.upenn.edu/current/lf-current/index.html},
+  key = {Books},
+  chcontrib = {minor},
+}
+
+@book{SfPlf,
+  author = {Benjamin C. Pierce and
+            Arthur {Azevedo de Amorim} and
+            Chris Casinghino and
+            Marco Gaboardi and
+            Michael Greenberg and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Vilhelm Sj\"oberg and
+            Andrew Tolmach and
+            Brent Yorgey},
+  title = {Software Foundations: Programming Language Foundations},
+  month = aug,
+  year = {2018},
+  publisher = {Electronic textbook},
+  url = {https://softwarefoundations.cis.upenn.edu/current/plf-current/index.html},
+  key = {Books},
+  chcontrib = {minor},
+}
+
 %% Workshop Papers
 
 @misc{FachiniHSELAPT17,
@@ -863,6 +884,22 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 
 %% Technical Reports
+
+@misc{yannis-report,
+  author = {Yannis Juglaret and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Arthur {Azevedo de Amorim} and
+            Benjamin C. Pierce and
+            Antal Spector-Zabusky and
+            Andrew Tolmach},
+  title = {Towards a Fully Abstract Compiler Using {Micro-Policies}:
+           Secure Compilation for Mutually Distrustful Components},
+  howpublished = {Technical Report, arXiv:1510.00697},
+  url = {http://arxiv.org/abs/1510.00697},
+  year = {2015},
+  month = oct,
+  chcontrib = {secondauthor},
+}
 
 @TechReport{MpNT:03,
   author = 	 {Ferucio L. \c{T}iplea
