--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -7,7 +7,8 @@
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Marco Patrignani and
             J\'er\'emy Thibault},
-  title = {Exploring Robust Property Preservation for Secure Compilation},
+  title = {Journey Beyond Full Abstraction:
+           Exploring Robust Property Preservation for Secure Compilation},
   howpublished = {arXiv:1807.04603},
   url = {https://arxiv.org/abs/1807.04603},
   month = jul,
@@ -34,7 +35,7 @@
   url = {https://arxiv.org/abs/1803.06547},
   month = mar,
   year = 2018,
-  chcontrib = {misc},
+  chcontrib = {minor},
 }
 
 %% Conference Papers
@@ -54,9 +55,13 @@
            Formally Secure Compilation Despite Dynamic Compromise},
   booktitle = {25th ACM Conference on
                Computer and Communications Security (CCS)},
+  shortbooktitle = {CCS},
   url = {https://arxiv.org/abs/1802.00588},
   year = {2018},
   month = oct,
+  pages = {1351--1368},
+  publisher = {{ACM}},
+  doi = {10.1145/3243734.3243745},
   chcontrib = {equalthree},
   acceptance = {134/809=0.17},
 }
@@ -719,6 +724,27 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   chcontrib = {minor},
 }
 
+%% Editor
+
+@Article{dagstuhl2018,
+  author =	{Amal Ahmed and Deepak Garg and C\u{a}t\u{a}lin Hri\c{t}cu and Frank Piessens},
+  title =	{{Secure Compilation (Dagstuhl Seminar 18201)}},
+  pages =	{1--30},
+  journal =	{Dagstuhl Reports},
+  ISSN =	{2192-5283},
+  year =	{2018},
+  volume =	{8},
+  number =	{5},
+  editor =	{Amal Ahmed and Deepak Garg and Catalin Hritcu and Frank Piessens},
+  publisher =	{Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
+  address =	{Dagstuhl, Germany},
+  URL =		{http://drops.dagstuhl.de/opus/volltexte/2018/9891},
+  URN =		{urn:nbn:de:0030-drops-98911},
+  doi =		{10.4230/DagRep.8.5.1},
+  annote =	{Keywords: secure compilation, low-level attacks, source-level reasoning, attacker models, full abstraction, hyperproperties, enforcement mechanisms, },
+  chcontrib = {first},
+}
+
 %% Workshop Papers
 
 @misc{FachiniHSELAPT17,
@@ -920,6 +946,17 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 
 %% Theses
+
+@PhdThesis{Hritcu:19,
+  author = {C\u{a}t\u{a}lin Hri\c{t}cu},
+  title = {The Quest for Formally Secure Compartmentalizing Compilation},
+  school = {ENS Paris},
+  year = {2019},
+  month =  jan,
+  type = {Habilitation thesis},
+  url = {http://prosecco.gforge.inria.fr/personal/hritcu/temp/habil/catalin_habil.pdf},
+  key = {Theses},
+}
 
 @PhdThesis{Hritcu:12,
   author = {C\u{a}t\u{a}lin Hri\c{t}cu},
