--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -953,7 +953,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   school = {ENS Paris},
   year = {2019},
   month =  jan,
-  type = {Habilitation thesis},
+  type = {Habilitation thesis, to be defended},
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/temp/habil/catalin_habil.pdf},
   key = {Theses},
 }
