--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -16,7 +16,7 @@
   chcontrib = {equaltwo},
 }
 
-@misc{metafstar,
+@inproceedings{metafstar,
   author = {Guido Mart\'inez and
             Danel Ahman and
             Victor Dumitrescu and
@@ -31,10 +31,12 @@
             Aseem Rastogi and
             Nikhil Swamy},
   title = {{Meta-F*}:  Proof Automation with {SMT}, Tactics, and Metaprograms},
-  howpublished = {arXiv:1803.06547},
+  booktitle = {28th European Symposium on Programming (ESOP)},
+  shortbooktitle = {ESOP},
   url = {https://arxiv.org/abs/1803.06547},
-  month = mar,
-  year = 2018,
+  month = april,
+  year = 2019,
+  note = {To appear},
   chcontrib = {minor},
 }
 
