--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -952,7 +952,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 @PhdThesis{Hritcu:19,
   author = {C\u{a}t\u{a}lin Hri\c{t}cu},
   title = {The Quest for Formally Secure Compartmentalizing Compilation},
-  school = {ENS Paris},
+  school = {ENS Paris; PSL Research University},
   year = {2019},
   month =  jan,
   type = {Habilitation thesis, to be defended},
