--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,20 @@
 %% Drafts
 
+@misc{dm4all,
+  author = {Kenji Maillard and
+            Danel Ahman and
+            Robert Atkey and
+            Guido Mart\'inez and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Exequiel Rivas and
+            \'Eric Tanter},
+  title = {Dijkstra Monads for All},
+  howpublished = {Draft},
+  year = {2019},
+  month = mar,
+  chcontrib = {minor},
+}
+
 @misc{AbateBGHPT18,
   author = {Carmine Abate and
             Roberto Blanco and
@@ -15,6 +30,8 @@
   year = 2018,
   chcontrib = {equaltwo},
 }
+
+%% Conference Papers
 
 @inproceedings{metafstar,
   author = {Guido Mart\'inez and
@@ -39,8 +56,6 @@
   note = {To appear},
   chcontrib = {minor},
 }
-
-%% Conference Papers
 
 @inproceedings{AbateABEFHLPST18,
   author = {Carmine Abate and
@@ -726,9 +741,28 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   chcontrib = {minor},
 }
 
+%% Book chapter
+
+@inbook{luck,
+  title        = {Luck: A Probabilistic Language for Testing},
+  booktitle    = {Foundations of Probabilistic Programming},
+  author = {Leonidas Lampropoulos and
+            Diane Gallois-Wong and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            John Hughes and
+            Benjamin C. Pierce and
+            {Li-yao} Xia},
+  note = {To appear in Foundations of Probabilistic Programming},
+  chcontrib = {minor},
+}
+  @Comment chapter      = 1,
+  @Comment pages        = "1-27",
+  @Comment year         = 2014,
+  @Comment publisher    = "John Wiley~\& Sons",
+
 %% Editor
 
-@Article{dagstuhl2018,
+@Article{dagstuhl-sc-2018,
   author =	{Amal Ahmed and Deepak Garg and C\u{a}t\u{a}lin Hri\c{t}cu and Frank Piessens},
   title =	{{Secure Compilation (Dagstuhl Seminar 18201)}},
   pages =	{1--30},
@@ -746,6 +780,24 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   annote =	{Keywords: secure compilation, low-level attacks, source-level reasoning, attacker models, full abstraction, hyperproperties, enforcement mechanisms, },
   chcontrib = {first},
 }
+
+%% Patent
+
+@patent{metadata,
+  author = {Andr\'e DeHon and
+            Eli Boling and
+            C\u{a}t\u{a}lin Hri\c{t}cu},
+  title = {Techniques for Metadata Processing},
+  number = {US20170177368A1},
+  nationality = {United States},
+  assignee = {Charles Stark Draper Laboratory, Inc., Cambridge, MA (US)},
+  url = {https://patents.google.com/patent/US20170177368A1/en},
+  year = {2017},
+  chcontrib = {minor},
+}
+% Citation not yet great:
+% http://mirrors.standaloneinstaller.com/ctan/macros/latex/contrib/IEEEtran/bibtex/IEEEtran_bst_HOWTO.pdf
+% https://academia.stackexchange.com/questions/41688/how-to-represent-and-cite-a-patent-using-bibtex
 
 %% Workshop Papers
 
@@ -955,7 +1007,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   school = {ENS Paris; PSL Research University},
   year = {2019},
   month =  jan,
-  type = {Habilitation thesis, to be defended},
+  type = {Habilitation thesis},
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf},
   key = {Theses},
 }
