--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -9,9 +9,10 @@
             Exequiel Rivas and
             \'Eric Tanter},
   title = {Dijkstra Monads for All},
-  howpublished = {Draft},
+  howpublished = {arXiv:1903.01237},
   year = {2019},
   month = mar,
+  url = {https://arxiv.org/abs/1903.01237},
   chcontrib = {minor},
 }
 
@@ -50,10 +51,13 @@
   title = {{Meta-F*}:  Proof Automation with {SMT}, Tactics, and Metaprograms},
   booktitle = {28th European Symposium on Programming (ESOP)},
   shortbooktitle = {ESOP},
-  url = {https://arxiv.org/abs/1803.06547},
-  month = april,
-  year = 2019,
-  note = {To appear},
+  pages     = {30--59},
+  publisher = {Springer},
+  year      = {2019},
+  month     = april,
+  url       = {https://fstar-lang.org/papers/metafstar},
+  ee        = {https://doi.org/10.1007/978-3-030-17184-1\_2},
+  doi       = {10.1007/978-3-030-17184-1\_2},
   chcontrib = {minor},
 }
 
