--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -16,7 +16,9 @@
   chcontrib = {minor},
 }
 
-@misc{AbateBGHPT18,
+%% Conference Papers
+
+@inproceedings{AbateBGHPT18,
   author = {Carmine Abate and
             Roberto Blanco and
             Deepak Garg and
@@ -25,14 +27,14 @@
             J\'er\'emy Thibault},
   title = {Journey Beyond Full Abstraction:
            Exploring Robust Property Preservation for Secure Compilation},
-  howpublished = {arXiv:1807.04603},
+  booktitle = {32nd IEEE Computer Security Foundations Symposium (CSF)},
+  shortbooktitle = {CSF},
   url = {https://arxiv.org/abs/1807.04603},
-  month = jul,
-  year = 2018,
+  month = jun,
+  year = 2019,
+  note = {To Appear},
   chcontrib = {equaltwo},
 }
-
-%% Conference Papers
 
 @inproceedings{metafstar,
   author = {Guido Mart\'inez and
