--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,6 +1,8 @@
 %% Drafts
 
-@misc{dm4all,
+%% Conference Papers
+
+@inproceedings{dm4all,
   author = {Kenji Maillard and
             Danel Ahman and
             Robert Atkey and
@@ -9,14 +11,16 @@
             Exequiel Rivas and
             \'Eric Tanter},
   title = {Dijkstra Monads for All},
-  howpublished = {arXiv:1903.01237},
+  booktitle = {24th ACM SIGPLAN International Conference on
+               Functional Programming (ICFP)},
+  shortbooktitle = {ICFP},
   year = {2019},
-  month = mar,
+  month = aug,
   url = {https://arxiv.org/abs/1903.01237},
   chcontrib = {minor},
+  acceptance = {39/119=0.33},
+  note = {To Appear},
 }
-
-%% Conference Papers
 
 @inproceedings{AbateBGHPT18,
   author = {Carmine Abate and
@@ -32,9 +36,9 @@
   url = {https://arxiv.org/abs/1807.04603},
   month = jun,
   year = 2019,
-  note = {To Appear},
   chcontrib = {equaltwo},
-  acceptance = {30/89=33.7},
+  acceptance = {30/89=0.34},
+  note = {To Appear},
 }
 
 @inproceedings{metafstar,
@@ -61,6 +65,7 @@
   url       = {https://fstar-lang.org/papers/metafstar},
   ee        = {https://doi.org/10.1007/978-3-030-17184-1\_2},
   doi       = {10.1007/978-3-030-17184-1\_2},
+  acceptance = {28/86=0.33},
   chcontrib = {minor},
 }
 
