--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,35 @@
 %% Drafts
 
+@misc{relational700,
+  author = {Kenji Maillard and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Exequiel Rivas and
+            Antoine Van Muylder},
+  title = {The Next 700 Relational Program Logics},
+  howpublished = {arXiv:1907.05244},
+  year = {2019},
+  month = jul,
+  url = {https://arxiv.org/abs/1907.05244},
+  chcontrib = {minor},
+}
+
+@misc{difftraces,
+  author = {Carmine Abate and
+            Roberto Blanco and
+            \c{S}tefan Ciob\^{a}c\u{a} and
+            Deepak Garg and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Marco Patrignani and
+            \'{E}ric Tanter and
+            J\'er\'emy Thibault},
+  title = {Trace-Relating Compiler Correctness and Secure Compilation},
+  howpublished = {arXiv:1907.05320},
+  year = {2019},
+  month = jul,
+  url = {https://arxiv.org/abs/1907.05320},
+  chcontrib = {average},
+}
+
 %% Conference Papers
 
 @inproceedings{dm4all,
@@ -881,7 +911,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   Andr\'e DeHon
   },
   title =	 {Hardware Support for Safety Interlocks and Introspection},
-  url = {http://www.crash-safe.org/sites/default/files/interlocks_ahns2012.pdf},
+  url = {http://www.crash-safe.org/docs/HWInterlocks-SASO-AHANS2012.html},
   month =	 sep,
   year =	 2012,
   booktitle =	 {SASO Workshop on Adaptive Host and Network Security},
