--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,18 +1,5 @@
 %% Drafts
 
-@misc{relational700,
-  author = {Kenji Maillard and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Exequiel Rivas and
-            Antoine Van Muylder},
-  title = {The Next 700 Relational Program Logics},
-  howpublished = {arXiv:1907.05244},
-  year = {2019},
-  month = jul,
-  url = {https://arxiv.org/abs/1907.05244},
-  chcontrib = {minor},
-}
-
 @misc{difftraces,
   author = {Carmine Abate and
             Roberto Blanco and
@@ -32,27 +19,41 @@
 
 %% Conference Papers
 
-@inproceedings{dm4all,
+@misc{relational700,
   author = {Kenji Maillard and
-            Danel Ahman and
-            Robert Atkey and
-            Guido Mart\'inez and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Exequiel Rivas and
-            \'Eric Tanter},
-  title = {Dijkstra Monads for All},
-  booktitle = {24th ACM SIGPLAN International Conference on
-               Functional Programming (ICFP)},
-  shortbooktitle = {ICFP},
-  year = {2019},
-  month = aug,
-  url = {https://arxiv.org/abs/1903.01237},
+            Antoine {Van Muylder}},
+  title = {The Next 700 Relational Program Logics},
+  howpublished = {To appear at POPL},
+  year = {2020},
+  url = {https://arxiv.org/abs/1907.05244},
   chcontrib = {minor},
-  acceptance = {39/119=0.33},
-  note = {To Appear},
+  acceptance = {68/247=0.28},
 }
 
-@inproceedings{AbateBGHPT18,
+@article{dm4all,
+  author    = {Kenji Maillard and
+               Danel Ahman and
+               Robert Atkey and
+               Guido Mart{\'{\i}}nez and
+               C\u{a}t\u{a}lin Hri\c{t}cu and
+               Exequiel Rivas and
+               {\'{E}}ric Tanter},
+  title     = {Dijkstra Monads for All},
+  journal   = {{PACMPL}},
+  volume    = {3},
+  number    = {{ICFP}},
+  pages     = {104:1--104:29},
+  year      = {2019},
+  url       = {https://doi.org/10.1145/3341708},
+  doi       = {10.1145/3341708},
+  url       = {https://arxiv.org/abs/1903.01237},
+  chcontrib = {minor},
+  acceptance = {39/119=0.33},
+}
+
+@inproceedings{AbateBGHPT19,
   author = {Carmine Abate and
             Roberto Blanco and
             Deepak Garg and
@@ -63,12 +64,15 @@
            Exploring Robust Property Preservation for Secure Compilation},
   booktitle = {32nd IEEE Computer Security Foundations Symposium (CSF)},
   shortbooktitle = {CSF},
+  pages = {256-271},
+  publisher = {IEEE},
+  ee = {https://doi.org/10.1109/CSF.2019.00025},
+  doi = {10.1109/CSF.2019.00025},
   url = {https://arxiv.org/abs/1807.04603},
   month = jun,
   year = 2019,
   chcontrib = {equaltwo},
   acceptance = {30/89=0.34},
-  note = {To Appear},
 }
 
 @inproceedings{metafstar,
@@ -308,7 +312,7 @@
   shortbooktitle = {CSF},
   year = {2016},
   month = jul,
-  publisher = {IEEE Computer Society Press},
+  publisher = {IEEE},
   url = {http://arxiv.org/abs/1602.04503},
   acceptance = {31/87=0.36},
   key = {Conference Papers},
@@ -475,7 +479,7 @@ http://www.crash-safe.org/node/24
   booktitle = {34th IEEE Symposium on Security and Privacy (Oakland S\&P)},
   shortbooktitle = {Oakland S\&P},
   pages = {3-17},
-  publisher = {IEEE Computer Society Press},
+  publisher = {IEEE},
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/all-your-ifcexception-oakland2013-full.pdf},
   acceptance = {38/315=0.12},
   month = may,
@@ -554,7 +558,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   month = jul,
   pages = {308-323},
   year = {2009},
-  publisher = {IEEE Computer Society Press},
+  publisher = {IEEE},
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/zk-compromise-csf2009.pdf},
   acceptance = {22/93=0.24},
   key = {Conference Papers},
@@ -584,7 +588,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   month = jun,
   year = {2008},
   pages = {195-209},
-  publisher = {IEEE Computer Society Press},
+  publisher = {IEEE},
   ee = {http://doi.ieeecomputersociety.org/10.1109/CSF.2008.26},
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/ev-applied-csf-final.pdf},
   acceptance = {21/115=0.18},
