--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,6 +1,8 @@
 %% Drafts
 
-@misc{difftraces,
+%% Conference Papers
+
+@inproceedings{difftraces,
   author = {Carmine Abate and
             Roberto Blanco and
             \c{S}tefan Ciob\^{a}c\u{a} and
@@ -10,24 +12,34 @@
             \'{E}ric Tanter and
             J\'er\'emy Thibault},
   title = {Trace-Relating Compiler Correctness and Secure Compilation},
-  howpublished = {arXiv:1907.05320},
-  year = {2019},
-  month = jul,
-  url = {https://arxiv.org/abs/1907.05320},
+  booktitle = {29th European Symposium on Programming (ESOP)},
+  shortbooktitle = {ESOP},
+  pages     = {1--28},
+  publisher = {Springer},
+  year      = {2020},
+  month     = apr,
+  url       = {https://arxiv.org/abs/1907.05320},
+  ee        = {https://doi.org/10.1007/978-3-030-44914-8\_1},
+  doi       = {10.1007/978-3-030-44914-8\_1},
   chcontrib = {average},
+  acceptance= {27/87=0.31},
 }
 
-%% Conference Papers
-
-@misc{relational700,
-  author = {Kenji Maillard and
+@article{relational700,
+  author    = {Kenji Maillard and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Exequiel Rivas and
             Antoine {Van Muylder}},
-  title = {The Next 700 Relational Program Logics},
-  howpublished = {To appear at POPL},
-  year = {2020},
-  url = {https://arxiv.org/abs/1907.05244},
+  title     = {The Next 700 Relational Program Logics},
+  journal   = {Proc. {ACM} Program. Lang.},
+  shortjournal = {PACMPL},
+  volume    = {4},
+  number    = {{POPL}},
+  pages     = {4:1--4:33},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/1907.05244},
+  ee        = {https://doi.org/10.1145/3371072},
+  doi       = {10.1145/3371072},
   chcontrib = {minor},
   acceptance = {68/247=0.28},
 }
@@ -807,6 +819,22 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   @Comment publisher    = "John Wiley~\& Sons",
 
 %% Editor
+
+@proceedings{cpp-2020,
+  editor    = {Jasmin Blanchette and
+               Catalin Hritcu},
+  title     = {Proceedings of the 9th {ACM} {SIGPLAN} International Conference on
+               Certified Programs and Proofs, {CPP} 2020, New Orleans, LA, USA, January
+               20-21, 2020},
+  publisher = {{ACM}},
+  year      = {2020},
+  url       = {https://doi.org/10.1145/3372885},
+  doi       = {10.1145/3372885},
+  isbn      = {978-1-4503-7097-4},
+  timestamp = {Thu, 23 Jan 2020 16:09:06 +0100},
+  biburl    = {https://dblp.org/rec/conf/cpp/2020.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 @Article{dagstuhl-sc-2018,
   author =	{Amal Ahmed and Deepak Garg and C\u{a}t\u{a}lin Hri\c{t}cu and Frank Piessens},
