--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,17 @@
 %% Drafts
 
+@misc{lio4free,
+  author = {Maximilian Algehed and
+            Jean-Philippe Bernardy and
+            C\u{a}t\u{a}lin Hri\c{t}cu},
+  title = {Dynamic {IFC} Theorems for Free!},
+  howpublished = {arXiv:2005.04722},
+  month = may,
+  year = 2020,
+  url = {https://arxiv.org/abs/2005.04722},
+  chcontrib = {minor},
+}
+
 %% Conference Papers
 
 @inproceedings{difftraces,
@@ -31,7 +43,7 @@
             Exequiel Rivas and
             Antoine {Van Muylder}},
   title     = {The Next 700 Relational Program Logics},
-  journal   = {Proc. {ACM} Program. Lang.},
+  journal   = {{PACMPL}},
   shortjournal = {PACMPL},
   volume    = {4},
   number    = {{POPL}},
