--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,3 @@
-%% Drafts
-
 %% Conference Papers
 
 @inproceedings{secureptrs,
@@ -11,6 +9,7 @@
             C\u{a}t\u{a}lin Hri\c{t}cu},
   title = {{SecurePtrs}: Proving Secure Compilation with Data-Flow Back-Translation and Turn-Taking Simulation},
   booktitle = {35th {IEEE} Computer Security Foundations Symposium, ({CSF})},
+  shortbooktitle = {CSF},
   year = 2022,
   month = aug,
   url = {https://arxiv.org/abs/2110.01439},
@@ -53,7 +52,7 @@
   pages     = {608--622},
   publisher = {{IEEE}},
   year      = {2021},
-  url       = {https://eprint.iacr.org/2021/397},
+  url       = {https://eprint.iacr.org/2021/397/20210526:113037},
   ee        = {https://doi.org/10.1109/CSF51468.2021.00048},
   doi       = {10.1109/CSF51468.2021.00048},
   timestamp = {Fri, 13 Aug 2021 09:35:20 +0200},
@@ -700,6 +699,27 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 %% Journal Papers
 
+@article{ssprove-toplas,
+  author    = {Philipp G. Haselwarter and
+               Exequiel Rivas and
+               Antoine Van Muylder and
+               Th{\'{e}}o Winterhalter and
+               Carmine Abate and
+               Nikolaj Sidorenco and
+               C\u{a}t\u{a}lin Hri\c{t}cu and
+               Kenji Maillard and
+               Bas Spitters},
+  title     = {{SSProve}: {A} Foundational Framework for Modular Cryptographic Proofs
+               in {Coq}},
+  journal   = {{ACM} Transactions on Programming Languages and Systems (TOPLAS)},
+  shortjournal = {TOPLAS},
+  publisher = {{ACM}},
+  year      = {2023},
+  note      = {To appear.},
+  url       = {https://eprint.iacr.org/2021/397},
+  chcontrib = {minor},
+}
+
 @article{AbateBCDGHPTT21,
   author    = {Carmine Abate and
                Roberto Blanco and
@@ -978,41 +998,69 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   chcontrib = {first},
 }
 
-%% Patent
+%% Drafts
 
-@patent{metadata,
-  author = {Andr\'e DeHon and
-            Eli Boling and
-            C\u{a}t\u{a}lin Hri\c{t}cu},
-  title = {Techniques for Metadata Processing},
-  number = {US20170177368A1},
-  nationality = {United States},
-  assignee = {Charles Stark Draper Laboratory, Inc., Cambridge, MA (US)},
-  url = {https://patents.google.com/patent/US20170177368A1/en},
-  year = {2017},
+@misc{AndriciHMRW23,
+  author = {Cezar-Constantin Andrici and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Guido Martínez and
+            Exequiel Rivas and
+            Th{\'{e}}o Winterhalter},
+  title = {Securely Compiling Verified {F*} Programs With {IO}},
+  howpublished = {Draft. Submitted to ICFP'23},
+  month = mar,
+  year = {2023},
+  url = {https://arxiv.org/abs/2303.01350},
+  chcontrib = {average},
+}
+
+@misc{HaselwarterHHWHS23,
+  author = {Philipp G. Haselwarter and
+            Benjamin Salling Hvass and
+            Lasse Letager Hansen and
+            Th{\'{e}}o Winterhalter and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Bas Spitters},
+  title = {The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography},
+  howpublished = {Draft. Submitted to CSF'23},
+  month = feb,
+  year = {2023},
+  url = {https://eprint.iacr.org/2023/185},
   chcontrib = {minor},
 }
-% Citation not yet great:
-% http://mirrors.standaloneinstaller.com/ctan/macros/latex/contrib/IEEEtran/bibtex/IEEEtran_bst_HOWTO.pdf
-% https://academia.stackexchange.com/questions/41688/how-to-represent-and-cite-a-patent-using-bibtex
 
 %% Workshop Papers
 
+@misc{ThibaultABGHT23,
+  author = {Jérémy Thibault and
+            Arthur Azevedo de Amorim and
+            Roberto Blanco and
+            Aïna Linn Georges and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Andrew Tolmach},
+  title = {{SECOMP2CHERI}: Securely Compiling Compartments from {CompCert C} to a Capability Machine},
+  howpublished = {Extended Abstract at Workshop on Principles of Secure Compilation (PriSC)},
+  month = jan,
+  year = {2023},
+  url = {https://catalin-hritcu.github.io/publications/SECOMP2CHERI-PriSC23.pdf},
+  chcontrib = {average},
+}
+
 @misc{AndriciWCR22,
   author = {Cezar-Constantin Andrici and
-            Théo Winterhalter and
+            Th{\'{e}}o Winterhalter and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Exequiel Rivas},
-  title = {Verifying non-terminating programs with IO in {F*}},
+  title = {Verifying non-terminating programs with {IO} in {F*}},
   howpublished = {Presentation at the 10th ACM SIGPLAN Workshop on Higher-Order
-                  Programming with Effects (HOPE 2022)},
+                  Programming with Effects (HOPE)},
   year = 2022,
-  month = sept,
+  month = sep,
   chcontrib = {minor},
 }
 
 @misc{WinterhalterAHMMR22,
-  author = {Théo Winterhalter and
+  author = {Th{\'{e}}o Winterhalter and
             Cezar-Constantin Andrici and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Kenji Maillard and
@@ -1020,7 +1068,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             Exequiel Rivas},
   title = {Partial {Dijkstra} Monads for All},
   howpublished = {Extended abstract of presentation at the 28th International
-                  Conference on Types for Proofs and Programs (TYPES 2022)},
+                  Conference on Types for Proofs and Programs (TYPES)},
   year = 2022,
   month = jun,
   chcontrib = {minor},
@@ -1349,3 +1397,21 @@ Advisor: Jan Schwinghammer, Programming  Systems  Lab,
   year = {2014},
   month = may,
 }
+
+%% Patent
+
+@patent{metadata,
+  author = {Andr\'e DeHon and
+            Eli Boling and
+            C\u{a}t\u{a}lin Hri\c{t}cu},
+  title = {Techniques for Metadata Processing},
+  number = {US20170177368A1},
+  nationality = {United States},
+  assignee = {Charles Stark Draper Laboratory, Inc., Cambridge, MA (US)},
+  url = {https://patents.google.com/patent/US20170177368A1/en},
+  year = {2017},
+  chcontrib = {minor},
+}
+% Citation not yet great:
+% http://mirrors.standaloneinstaller.com/ctan/macros/latex/contrib/IEEEtran/bibtex/IEEEtran_bst_HOWTO.pdf
+% https://academia.stackexchange.com/questions/41688/how-to-represent-and-cite-a-patent-using-bibtex
