--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -714,6 +714,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   journal   = {{ACM} Transactions on Programming Languages and Systems (TOPLAS)},
   shortjournal = {TOPLAS},
   publisher = {{ACM}},
+  month     = jan, 
   year      = {2023},
   note      = {To appear.},
   url       = {https://eprint.iacr.org/2021/397},
