--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -910,7 +910,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 %% Book chapter
 
 @inbook{luck,
-  title        = {Luck: A Probabilistic Language for Testing},
+  title        = {{Luck}: A Probabilistic Language for Testing},
   booktitle    = {Foundations of Probabilistic Programming},
   author = {Leonidas Lampropoulos and
             Diane Gallois-Wong and
@@ -918,13 +918,13 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             John Hughes and
             Benjamin C. Pierce and
             {Li-yao} Xia},
-  note = {To appear in Foundations of Probabilistic Programming},
+  chapter = 13,
+  pages = "449-488",
+  publisher = {Cambridge University Press},
+  month = nov,
+  year = {2020},
   chcontrib = {minor},
 }
-  @Comment chapter      = 1,
-  @Comment pages        = "1-27",
-  @Comment year         = 2014,
-  @Comment publisher    = "John Wiley~\& Sons",
 
 %% Editor
 
@@ -951,7 +951,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   editor    = {C\u{a}t\u{a}lin Hri\c{t}cu and
                Andrei Popescu},
   title     = {Proceedings of the 10th {ACM} {SIGPLAN} International Conference on Certified
-               Programs and Proofs, Virtual Event, Denmark, January 17-19, 2021},
+               Programs and Proofs, {CPP} 2021, Virtual Event, Denmark, January 17-19, 2021},
   publisher = {{ACM}},
   year      = {2021},
   url       = {https://doi.org/10.1145/3437992},
