--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1034,7 +1034,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 @misc{ThibaultABGHT23,
   author = {Jérémy Thibault and
-            Arthur Azevedo de Amorim and
+            Arthur {Azevedo de Amorim} and
             Roberto Blanco and
             Aïna Linn Georges and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -1073,6 +1073,18 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   year = 2022,
   month = jun,
   chcontrib = {minor},
+}
+
+@misc{nanopass,
+  author = {Jérémy Thibault and
+            C\u{a}t\u{a}lin Hri\c{t}cu},
+  title = {Nanopass Back-Translation of Multiple Traces for Secure Compilation Proofs
+},
+  howpublished = {PriSC},
+  url = {https://popl21.sigplan.org/details/prisc-2021-papers/5/Nanopass-Back-Translation-of-Multiple-Traces-for-Secure-Compilation-Proofs},
+  month = jan,
+  year = 2021,
+  chcontrib = average,
 }
 
 @misc{FachiniHSELAPT17,
