--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1080,7 +1080,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             C\u{a}t\u{a}lin Hri\c{t}cu},
   title = {Nanopass Back-Translation of Multiple Traces for Secure Compilation Proofs
 },
-  howpublished = {PriSC},
+  howpublished = {Extended Abstract at Workshop on Principles of Secure Compilation (PriSC)},
   url = {https://popl21.sigplan.org/details/prisc-2021-papers/5/Nanopass-Back-Translation-of-Multiple-Traces-for-Secure-Compilation-Proofs},
   month = jan,
   year = 2021,
