--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -58,7 +58,7 @@
   timestamp = {Fri, 13 Aug 2021 09:35:20 +0200},
   biburl    = {https://dblp.org/rec/conf/csfw/AbateHRMWHMS21.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  chcontrib = {minor},
+  chcontrib = {average},
   acceptance = {43/172=0.25},
 }
 
@@ -718,7 +718,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   year      = {2023},
   note      = {To appear.},
   url       = {https://eprint.iacr.org/2021/397},
-  chcontrib = {minor},
+  chcontrib = {average},
 }
 
 @article{AbateBCDGHPTT21,
