--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1023,7 +1023,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Bas Spitters},
   title = {The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography},
-  howpublished = {Draft. Submitted to CSF'23},
+  howpublished = {Draft.},
   month = feb,
   year = {2023},
   url = {https://eprint.iacr.org/2023/185},
@@ -1406,7 +1406,7 @@ Advisor: Jan Schwinghammer, Programming  Systems  Lab,
           Benjamin C. Pierce and
           Andr\'{e} DeHon},
   title = {Programming the {PUMP}: Hardware-Assisted Micro-Policies for Security},
-  howpublished = {Submitted},
+  howpublished = {Draft},
   year = {2014},
   month = may,
 }
