--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1008,7 +1008,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             Exequiel Rivas and
             Th{\'{e}}o Winterhalter},
   title = {Securely Compiling Verified {F*} Programs With {IO}},
-  howpublished = {Draft. Submitted to ICFP'23},
+  howpublished = {Draft on arXiv},
   month = mar,
   year = {2023},
   url = {https://arxiv.org/abs/2303.01350},
@@ -1023,7 +1023,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Bas Spitters},
   title = {The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography},
-  howpublished = {Draft.},
+  howpublished = {Draft on Cryptology ePrint Archive},
   month = feb,
   year = {2023},
   url = {https://eprint.iacr.org/2023/185},
