--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,19 @@
 %% Conference Papers
 
+@misc{AndriciHMRW23,
+  author = {Cezar-Constantin Andrici and
+            \c{S}tefan Ciob\^{a}c\u{a} and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Guido Martínez and
+            Exequiel Rivas and
+            \'{E}ric Tanter and
+            Th{\'{e}}o Winterhalter},
+  title = {Securing Verified {IO} Programs Against Unverified Code in {F*}},
+  howpublished = {Conditionally accepted at POPL 2024},
+  url = {https://arxiv.org/abs/2303.01350},
+  chcontrib = {average},
+}
+
 @inproceedings{secureptrs,
   author = {Akram El-Korashy and
             Roberto Blanco and
@@ -714,9 +728,15 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   journal   = {{ACM} Transactions on Programming Languages and Systems (TOPLAS)},
   shortjournal = {TOPLAS},
   publisher = {{ACM}},
-  month     = jan, 
+  volume    = {45},
+  number    = {3},
+  issn      = {0164-0925},
+  ee        = {https://doi.org/10.1145/3594735},  
+  doi       = {10.1145/3594735},
+  month     = jul, 
   year      = {2023},
-  note      = {To appear.},
+  articleno = {15},
+  numpages  = {61},
   url       = {https://eprint.iacr.org/2021/397},
   chcontrib = {average},
 }
@@ -727,7 +747,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
                {\c{S}}tefan Ciob{\^{a}}c{\u{a}} and
                Adrien Durier and
                Deepak Garg and
-               Catalin Hritcu and
+               C\u{a}t\u{a}lin Hri\c{t}cu and
                Marco Patrignani and
                {\'{E}}ric Tanter and
                J{\'{e}}r{\'{e}}my Thibault},
@@ -931,7 +951,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 @article{dagstuhl-sc-2021,
   author    = {David Chisnall and
                Deepak Garg and
-               Catalin Hritcu and
+               C\u{a}t\u{a}lin Hri\c{t}cu and
                Mathias Payer},
   title     = {{Secure Compilation (Dagstuhl Seminar 21481)}},
   journal   = {Dagstuhl Reports},
@@ -1000,20 +1020,6 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 }
 
 %% Drafts
-
-@misc{AndriciHMRW23,
-  author = {Cezar-Constantin Andrici and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Guido Martínez and
-            Exequiel Rivas and
-            Th{\'{e}}o Winterhalter},
-  title = {Securely Compiling Verified {F*} Programs With {IO}},
-  howpublished = {Draft on arXiv},
-  month = mar,
-  year = {2023},
-  url = {https://arxiv.org/abs/2303.01350},
-  chcontrib = {average},
-}
 
 @misc{HaselwarterHHWHS23,
   author = {Philipp G. Haselwarter and
