--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,6 +1,23 @@
 %% Conference Papers
 
-@misc{AndriciHMRW23,
+@misc{ThibaultBLAAGHT24,
+  author = {Jérémy Thibault and
+            Roberto Blanco and
+            Dongjae Lee and
+            Sven Argo and
+            Arthur {Azevedo de Amorim} and
+            Aïna Linn Georges and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Andrew Tolmach},
+  title = {{SECOMP}: Formally Secure Compilation of Compartmentalized {C} Programs},
+  howpublished = {Accepted at CCS'24},
+  month = jan,
+  year = {2024},
+  url = {http://arxiv.org/abs/2401.16277},
+  chcontrib = {average},
+}
+
+@article{AndriciHMRW24,
   author = {Cezar-Constantin Andrici and
             \c{S}tefan Ciob\^{a}c\u{a} and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -9,9 +26,30 @@
             \'{E}ric Tanter and
             Th{\'{e}}o Winterhalter},
   title = {Securing Verified {IO} Programs Against Unverified Code in {F*}},
-  howpublished = {Conditionally accepted at POPL 2024},
+  journal   = {{PACMPL}},
+  shortjournal = {PACMPL},
+  volume    = {8},
+  number    = {{POPL}},
+  pages     = {74:1--74:34},
+  year      = {2024},
+  month = jan,
   url = {https://arxiv.org/abs/2303.01350},
   chcontrib = {average},
+}
+
+@misc{HaselwarterHHWHS24,
+  author = {Philipp G. Haselwarter and
+            Benjamin Salling Hvass and
+            Lasse Letager Hansen and
+            Th{\'{e}}o Winterhalter and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Bas Spitters},
+  title = {The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography},
+  howpublished = {In ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)},
+  month = jan,
+  year = {2024},
+  url = {https://eprint.iacr.org/2023/185},
+  chcontrib = {minor},
 }
 
 @inproceedings{secureptrs,
@@ -927,6 +965,18 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   chcontrib = {minor},
 }
 
+@book{SfSef,
+  author = {C\u{a}t\u{a}lin Hri\c{t}cu and
+            Roberto Blanco},
+  title = {Software Foundations: Security Foundations},
+  month = mar,
+  year = {2024},
+  publisher = {Draft textbook volume},
+  url = {https://mpi-sp-foe-2023-24.github.io/book/toc.html},
+  key = {Books},
+  chcontrib = {major},
+}
+
 %% Book chapter
 
 @inbook{luck,
@@ -1021,22 +1071,22 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 %% Drafts
 
-@misc{HaselwarterHHWHS23,
-  author = {Philipp G. Haselwarter and
-            Benjamin Salling Hvass and
-            Lasse Letager Hansen and
-            Th{\'{e}}o Winterhalter and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Bas Spitters},
-  title = {The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography},
-  howpublished = {Draft on Cryptology ePrint Archive},
-  month = feb,
-  year = {2023},
-  url = {https://eprint.iacr.org/2023/185},
-  chcontrib = {minor},
-}
 
 %% Workshop Papers
+
+@misc{BlancoDFGH23,
+  title = {Short Paper: Mechanized Proofs of Masking Security},
+  author = {Roberto Blanco and
+            Christian Doczkal and
+            Jakob Feldtkeller and
+            Tim Güneysu and
+            C\u{a}t\u{a}lin Hri\c{t}cu},
+  howpublished = {18th Workshop on Programming Languages and Analysis for Security (PLAS 2023 at CCS 2023)},
+  month = nov,
+  year = {2023},
+  url = {https://hal.science/hal-04510257},
+  chcontrib = {minor},
+}
 
 @misc{ThibaultABGHT23,
   author = {Jérémy Thibault and
