--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -395,7 +395,7 @@
   month = jan,
   ee = {https://dl.acm.org/citation.cfm?id=3009878},
   doi = {10.1145/3009837.3009878},
-  url = {https://www.fstar-lang.org/papers/dm4free/},
+  url = {https://fstar-lang.org/papers/dm4free/},
   pages = {515-529},
   publisher = {ACM},
   acceptance = {64/279=0.23},
@@ -469,7 +469,7 @@
   year = {2016},
   doi = {10.1145/2837614.2837655},
   ee = {http://dx.doi.org/10.1145/2837614.2837655},
-  url = {https://www.fstar-lang.org/papers/mumon/},
+  url = {https://fstar-lang.org/papers/mumon/},
   acceptance = {59/253=0.23},
   chcontrib = {secondauthor},
 }
