--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,6 +1,6 @@
 %% Conference Papers
 
-@misc{ThibaultBLAAGHT24,
+@inproceedings{ThibaultBLAAGHT24,
   author = {Jérémy Thibault and
             Roberto Blanco and
             Dongjae Lee and
@@ -10,11 +10,14 @@
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Andrew Tolmach},
   title = {{SECOMP}: Formally Secure Compilation of Compartmentalized {C} Programs},
-  howpublished = {Accepted at CCS'24},
-  month = jan,
-  year = {2024},
+  booktitle    = {{ACM} {SIGSAC} Conference on Computer and Communications Security ({CCS})},
+  shortbooktitle = {CCS},
+  pages        = {1061--1075},
+  publisher    = {{ACM}},
+  year         = {2024},
+  doi          = {10.1145/3658644.3670288},
   url = {http://arxiv.org/abs/2401.16277},
-  chcontrib = {average},
+  chcontrib = {average}
 }
 
 @article{AndriciHMRW24,
