--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -10,11 +10,12 @@
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Andrew Tolmach},
   title = {{SECOMP}: Formally Secure Compilation of Compartmentalized {C} Programs},
-  booktitle    = {{ACM} {SIGSAC} Conference on Computer and Communications Security ({CCS})},
+  booktitle    = {31th {ACM} {SIGSAC} Conference on Computer and Communications Security ({CCS})},
   shortbooktitle = {CCS},
   pages        = {1061--1075},
   publisher    = {{ACM}},
   year         = {2024},
+  month        = oct,
   doi          = {10.1145/3658644.3670288},
   url = {http://arxiv.org/abs/2401.16277},
   chcontrib = {average}
