--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -41,19 +41,23 @@
   chcontrib = {average},
 }
 
-@misc{HaselwarterHHWHS24,
-  author = {Philipp G. Haselwarter and
-            Benjamin Salling Hvass and
-            Lasse Letager Hansen and
-            Th{\'{e}}o Winterhalter and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Bas Spitters},
-  title = {The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography},
-  howpublished = {In ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)},
-  month = jan,
-  year = {2024},
-  url = {https://eprint.iacr.org/2023/185},
-  chcontrib = {minor},
+@inproceedings{HaselwarterHHWHS24,
+  author       = {Philipp G. Haselwarter and
+                  Benjamin Salling Hvass and
+                  Lasse Letager Hansen and
+                  Th{\'{e}}o Winterhalter and
+                  C\u{a}t\u{a}lin Hri\c{t}cu and
+                  Bas Spitters},
+  title        = {The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography},
+  booktitle    = {13th {ACM SIGPLAN} International Conference on Certified Programs and Proofs ({CPP})},
+  pages        = {30--44},
+  publisher    = {{ACM}},
+  month        = jan,
+  year         = {2024},
+  doi          = {10.1145/3636501.3636961},
+  url          = {https://eprint.iacr.org/2023/185},
+  acceptance   = {20/50=0.40},
+  chcontrib    = {minor},
 }
 
 @inproceedings{secureptrs,
