--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -17,7 +17,8 @@
   year         = {2024},
   month        = oct,
   doi          = {10.1145/3658644.3670288},
-  url = {http://arxiv.org/abs/2401.16277},
+  url          = {http://arxiv.org/abs/2401.16277},
+  acceptance   = {328/1964=0.17},
   chcontrib = {average}
 }
 
@@ -36,8 +37,9 @@
   number    = {{POPL}},
   pages     = {74:1--74:34},
   year      = {2024},
-  month = jan,
-  url = {https://arxiv.org/abs/2303.01350},
+  month     = jan,
+  url       = {https://arxiv.org/abs/2303.01350},
+  acceptance = {93/314=0.30},
   chcontrib = {average},
 }
 
